# interview-test-task

./: Dockerfile  README.md  db  pyproject.toml
script/: category_names.json  images.csv  make_random_csv.py  populate_db_from_csv.py
src/: __main__.py
src/interview_test_task/: create_app.py  settings.py
src/interview_test_task/api/v1/images/: core.py  models.py  views.py
