[tool.poetry]
name = "interview-test-task"
version = "0.1.0"
description = ""
authors = ["Emil Kadermetov"]

[tool.poetry.dependencies]
python = "^3.8"
aiosqlite = "^0.17.0"
pydantic = "^1.9.1"
loguru = "^0.6.0"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
